--- a/style.scss
+++ b/style.scss
@@ -27,6 +27,7 @@ ul{
         text-decoration: none;
         font-size: 28px;
         color: rgb(104, 38, 148);
+        background-color: black;
         
 
     }
